Now detects pauses and then types in a message. Also removed animated react logo and fixed text formatting so that word wraps are used.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: left;
   height: 100vh;
+  width: 100%;
   background-color: #000000;
 }
 
 .Paper{
+  white-space: pre-wrap;
   color: #ffffff;
   padding: 1px;
 }
